<resources>
    <string name="app_name">Sample Authentication</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="todo">TODO</string>
    <string name="id">Id</string>
    <string name="example">Example</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="sign_out">Sign Out</string>
</resources>