<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".DashboardActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"

        android:id="@+id/profile_image"

        android:layout_marginTop="50dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/id"
        android:text="@string/id"
        android:textSize="24sp"
        android:textColor="@color/white"

        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/id_txt"
        android:text="@string/example"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"

        android:layout_marginTop="4dp"

        app:layout_constraintStart_toStartOf="@+id/id"
        app:layout_constraintTop_toBottomOf="@+id/id" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/name"
        android:text="@string/name"
        android:textSize="24sp"
        android:textColor="@color/white"

        android:layout_marginTop="30dp"

        app:layout_constraintStart_toStartOf="@+id/id_txt"
        app:layout_constraintTop_toBottomOf="@+id/id_txt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/name_txt"
        android:text="@string/example"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"

        android:layout_marginTop="4dp"

        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/email"
        android:text="@string/email_address"
        android:textSize="24sp"
        android:textColor="@color/white"

        android:layout_marginTop="30dp"

        app:layout_constraintStart_toStartOf="@+id/name_txt"
        app:layout_constraintTop_toBottomOf="@+id/name_txt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/email_txt"
        android:text="@string/example"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"

        android:layout_marginTop="4dp"

        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/sign_out_btn"
        android:text="@string/sign_out"
        android:textAllCaps="false"

        android:layout_marginBottom="20dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>